--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="logout_text">Logout</string>
     <string name="toast_added">Shoe Added Sucessfully</string>
     <string name="toast_empty">Please Enter All Values</string>
+    <string name="register_text">Register</string>
 </resources>
